Resolved color mismatch in navbar and increase transparency of container wrapping cards

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -29,9 +29,9 @@
   font-size: 20px;
 }
 
-#search-font {
+.search-font {
   font-size: 20px;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 #avatar-role {
