--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -4,7 +4,14 @@
   // margin-bottom: 40px;
   text-align: center;
   width: auto;
-  // background-color: rgba(245,245,220,0.3);
+  background-color: rgba(245,245,220,0.3);
+}
+
+#card-container {
+  text-align: center;
+  width: auto;
+  border-radius: 40px;
+  background-color: rgba(245,245,220,0.3);
 }
 
 .title-container {
