--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,9 +5,9 @@
 .navbar-logo {
   justify-content: space-between;
   // background: transparent;
-  background-color: #f1edd5;
+  background-color: #f2efd7;
   border-bottom: 1px solid white ;
-  box-shadow: 5px 5px 10px rgba(0,0,0,0.3);
+  box-shadow: 4px 4px 8px rgba(0,0,0,0.2);
 }
 
 .navbar-logo .navbar-collapse {
